updated auth0 due to security vulnerability in prior versions

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "auth0-js": "^8.12.1",
     "expo": "^21.0.0",
     "jwt-decode": "^2.2.0",
     "jwt-simple": "^0.5.1",
